--- a/client/src/components/Card/SubtitleItem/Card-SubtitleItem.scss
+++ b/client/src/components/Card/SubtitleItem/Card-SubtitleItem.scss
@@ -13,6 +13,7 @@
 @media screen and (max-width: $screen-s) {
   .Card-SubtitleItem {
     margin-left: 0;
+    max-width: 100%;
   }
 
   .Card-SubtitleItem:first-child {
