--- a/client/src/components/button/Button.scss
+++ b/client/src/components/button/Button.scss
@@ -92,8 +92,8 @@
   }
 
   .Button_type_text {
-    height: 32px;
-    line-height: 36px;
+    height: 36px;
+    line-height: 32px;
     justify-content: center;
     padding: 0;
   }
