--- a/client/src/components/header/Logo/Header-Logo.scss
+++ b/client/src/components/header/Logo/Header-Logo.scss
@@ -10,7 +10,7 @@
 }
 
 @media screen and (max-width: $screen-s) {
-  .Header-BuildTitle {
+  .Header-Logo {
     font-size: var(--size-text-2xl);
     align-self: center;
     line-height: 22px;
